FaaS-FT-Checkpointing-Project/deploy-router/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: checkpoint-system
  labels:
    name: checkpoint-system
    app: incremental-checkpoint
